--- a/test/test.html
+++ b/test/test.html
@@ -6,10 +6,12 @@
     </style>
 </head>
 <body style="background: #fff;">
-    <div class="button" style="border: 1px solid #000;">
-        <div class="button__text">
-            Text
+    <section id="main" style="width: 800px; margin: auto;">
+        <div class="button" style="border: 1px solid #000;">
+            <div class="button__text">
+                Text
+            </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
